kubernetes/artemis-cluster/apps/external/truenas/IngressRoute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`truenas.dcunha.io`)
    kind: Rule
    services:
    - name: truenas-svc
      port: 1443
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
